# libsdcxx

./: .gitignore  LICENSE  MANIFEST.in  README.adoc  adoc2md.sh  build.sh  pypi_upload.sh  setup.py
doc/: adoc2html.sh  sequence_matcher.adoc  sequence_matcher.html
src/: CMakeLists.txt
src/libpysdc/: CMakeLists.txt  bigrams.cxx  pysdc_bigram_multiset.cxx  pysdc_bigrams.cxx  pysdc_unordered_bigram_multiset.cxx  unordered_bigram_multiset.cxx
src/libpysdcxx/: CMakeLists.txt  bigram_multiset.cxx  sequence_matcher.cxx  util.hxx
src/libsdcxx/: CMakeLists.txt  bigram_multiset.hxx  bigrams.cxx  bigrams.hxx  config.hxx.in  sequence_matcher.hxx
src/perf_test/: matching.py  op_time.py  pybigrams.py  sequences.txt  short.txt  test.txt
src/pysdc/: CMakeLists.txt  __init__.py  bigram_multiset.py  bigrams.py  libpysdc.py  pysdc.cxx  pysdc.py  sequence_matcher.py  setup.py  test_pysdc.py  unordered_bigram_multiset.py
src/pysdcxx/: bigram_multiset.py  bigrams.py  libpysdcxx.py  sequence_matcher.py  unordered_bigram_multiset.py  util.py
src/unit_test/: CMakeLists.txt  test_bigrams.cxx  test_bigrams.py  unit_test.cxx
src/unit_test/cxx/: CMakeLists.txt  test_bigram_multiset.cxx  test_bigrams.cxx  test_sequence_matcher.cxx  test_unordered_bigram_multiset.cxx  unit_test.cxx  unit_test.hxx
src/unit_test/python/: test_bigram_multiset.py  test_bigrams.py  test_sequence_matcher.py  test_unordered_bigram_multiset.py
